fix: overflow issues for mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,6 +6,7 @@ html{
   }
   body {
     margin: 0;
+    max-width: 100vw;
   }
   body h1:first-child{
       display: none;
